# corpus-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/corpus-assess/: SKILL.md
.claude/skills/corpus-evaluate/: SKILL.md
.claude/skills/corpus-ingest/: SKILL.md
docs/superpowers/plans/: 2026-07-12-phase1-ingest-assess.md  2026-07-13-phase2-ground-truth-baseline.md
docs/superpowers/specs/: 2026-07-12-ground-truth-protocol.md  2026-07-12-ocr-corpus-pipeline-design.md
src/corpus_tools/: __main__.py  assess.py  assess_run.py  catalog.py  evaluate.py  gt.py  ingest.py  metrics.py  pdfio.py  report.py  report_eval.py  run0.py  sampling.py  spreads.py  workspace.py
src/corpus_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_assess.py  test_assess_run.py  test_catalog.py  test_evaluate.py  test_gt.py  test_ingest.py  test_main.py  test_metrics.py  test_pdfio.py  test_report.py  test_report_eval.py  test_run0.py  test_sampling.py  test_scaffold.py  test_spreads.py  test_workspace.py
