[project]
name = "corpus-tools"
version = "0.1.0"
description = "Reusable OCR remediation pipeline for scanned archival corpora"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pypdf>=6",
    "pillow>=10",
    "numpy>=2",
    "opencv-python-headless>=4.10",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
